# webclaw

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.ci  LICENSE  README.md  docker-compose.yml  smithery.yaml
.github/: FUNDING.yml
benchmarks/: README.md  facts.json  methodology.md  run.sh  sites.txt
benchmarks/results/: 2026-04-17.json
benchmarks/scripts/: bench.py
crates/webclaw-cli/: Cargo.toml
crates/webclaw-cli/src/: bench.rs  cloud.rs  main.rs
crates/webclaw-core/: Cargo.toml
crates/webclaw-core/src/: data_island.rs  extractor.rs  lib.rs  markdown.rs  noise.rs  structured_data.rs  youtube.rs
crates/webclaw-core/src/llm/: mod.rs
crates/webclaw-fetch/: Cargo.toml
crates/webclaw-fetch/src/: browser.rs  client.rs  cloud.rs  crawler.rs  error.rs  lib.rs
crates/webclaw-fetch/src/extractors/: amazon_product.rs  ecommerce_product.rs  etsy_listing.rs  github_repo.rs  hackernews.rs  huggingface_model.rs  mod.rs  npm.rs  pypi.rs  reddit.rs  shopify_product.rs  trustpilot_reviews.rs  twitter.rs
crates/webclaw-fetch/tests/: bench_1k.rs
crates/webclaw-mcp/: Cargo.toml
crates/webclaw-mcp/src/: cloud.rs  main.rs  server.rs  tools.rs
crates/webclaw-server/: Cargo.toml
crates/webclaw-server/src/: auth.rs  error.rs  main.rs  state.rs
crates/webclaw-server/src/routes/: batch.rs  brand.rs  crawl.rs  diff.rs  extract.rs  health.rs  map.rs  mod.rs  scrape.rs  structured.rs  summarize.rs
