[package]
name = "webclaw-core"
description = "Pure HTML content extraction engine for LLMs"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
scraper = "0.22"
ego-tree = "0.10"
url = { version = "2", features = ["serde"] }
regex = "1"
once_cell = "1"
similar = "2"

[dev-dependencies]
tokio = { workspace = true }
